<resources>
    <string name="app_name">SIY</string>
    <string name="txt_explorer">Explorer</string>
    <string name="txt_recorder">Recorder</string>
    <string name="txt_already_a_member">Already a member?</string>
    <string name="txt_sign_in_main"><u>Sign In</u></string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_email_id"><font size="14">Email ID</font></string>
    <string name="txt_password"><font size="14">Password</font></string>
    <string name="txt_confirm_password"><font size="14">Confirm Password</font></string>
    <string name="txt_sign_up_as">Sign Up As:</string>
    <string name="txt_forgot_password"><b>Forgot Password?</b></string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="send_email"><b>Send Email</b></string>
    <string name="xxx_xxx">XXX-XXX</string>
    <string name="submit">Submit</string>
    <string name="please_enter_the_temporary_code_from_your_email_below">Please enter the temporary code from your email below</string>
    <string name="please_enter_a_new_password">Please enter a new password</string>
    <string name="txt_resend_code">Resend Code?</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="slide_1_title_explorer">Explorer Sign Up</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="preferred_languages_explorer">
        <item>-- select language --</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Urdu</item>
        <item>French</item>
        <item>Chinese</item>
        <item>Spanish</item>
    </string-array>
    <string name="title_activity_explorer_home">Map</string>
    <string name="txt_holder_name">Holder Name</string>
    <string name="txt_hint_john">John</string>
    <string name="txt_card_number">Card Number</string>
    <string name="et_hint_card_number">5421-XXXX-XXXX-5875</string>
    <string name="txt_cvv">CVV</string>
    <string name="et_hint_cvv">XXX</string>
    <string name="txt_expiry_date">Expiry Date</string>
    <string name="tv_hint_expiry_date">MM/YYYY</string>
    <string name="txt_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_send">Send</string>
    <string name="note_string_booking_confirmation">Note: Be sure to let your Recorder know of any special requests you have (ex: show me the inside of the kitchen cabinets).</string>
    <string name="end_chat_recorder_message"><![CDATA[Do you want to end chat & mark this job as complete]]></string>
    <string name="fyi_string_on_hired_page">FYI: This job falls outside your desired commute radius. You\'ll earn extra $$ for this one!</string>
    <string name="terms_and_conditions"><u>terms and conditions</u></string>
    <string name="termes_and_conditions_text">If any provision of these Terms and Conditions is held to be invalid or unenforceable, the provision shall be removed (or interpreted, if possible, in a manner as to be enforceable), and the remaining provisions shall be enforced. Headings are for reference purposes only and in no way define, limit, construe or describe the scope or extent of such section. Our failure to act with respect to a breach by you or others does not waive our right to act with respect to subsequent or similar breaches. These Terms and Conditions set forth the entire understanding and agreement between us with respect to the subject matter contained herein and supersede any other agreement, proposals and communications, written or oral, between our representatives and you with respect to the subject matter hereof, including any terms and conditions on any of customers documents or purchase orders.
B. No Joint Venture, No Derogation of Rights. You agree that no joint venture, partnership, employment, or agency relationship exists between you and us as a result of these Terms and Conditions or your use of the Site. Our performance of these Terms and Conditions is subject to existing laws and legal process, and nothing contained herein is in derogation of our right to comply with governmental, court and law enforcement requests or requirements relating to your use of the Site or information provided to or gathered by us with respect to such use.

    If any provision of these Terms and Conditions is held to be invalid or unenforceable, the provision shall be removed (or interpreted, if possible, in a manner as to be enforceable), and the remaining provisions shall be enforced. Headings are for reference purposes only and in no way define, limit, construe or describe the scope or extent of such section. Our failure to act with respect to a breach by you or others does not waive our right to act with respect to subsequent or similar breaches. These Terms and Conditions set forth the entire understanding and agreement between us with respect to the subject matter contained herein and supersede any other agreement, proposals and communications, written or oral, between our representatives and you with respect to the subject matter hereof, including any terms and conditions on any of customers documents or purchase orders.
B. No Joint Venture, No Derogation of Rights. You agree that no joint venture, partnership, employment, or agency relationship exists between you and us as a result of these Terms and Conditions or your use of the Site. Our performance of these Terms and Conditions is subject to existing laws and legal process, and nothing contained herein is in derogation of our right to comply with governmental, court and law enforcement requests or requirements relating to your use of the Site or information provided to or gathered by us with respect to such use.</string>
    <string-array name="desired_commute">
        <item>-- select commute --</item>
        <item>3-5 miles</item>
        <item>5-7 miles</item>
        <item>7+ miles</item>
    </string-array>

    <string-array name="gender">
        <item> -- select gender --</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="i_am_a">
        <item>-- select profession --</item>
        <item>Student</item>
        <item>Self-Employee</item>
        <item>Corporate Employee</item>
        <item>Veteran</item>
        <item>Other</item>
    </string-array>
    <!-- <string name="google_place_api">AIzaSyBm6eaFf8BG2MdjQ_7AmiCsgoqkPhxT27s</string>-->

</resources>
