<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.app.siy.activity.explorer.ResetPasswordActivity">

    <include android:id="@+id/tool_bar_include_reset_password_activity" layout="@layout/toolbar_layout"/>

    <RelativeLayout
        android:layout_below="@id/tool_bar_include_reset_password_activity"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/please_enter_new_password"
            android:text="@string/please_enter_a_new_password"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/et_new_password"
            android:layout_marginTop="50dp"
            android:drawableLeft="@drawable/password_grey"
            android:drawablePadding="20dp"
            android:hint="@string/txt_password"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            app:theme="@style/MyEditTextTheme"
            android:layout_below="@id/please_enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_below_new_password"
            android:layout_below="@id/et_new_password"
            android:background="#aaaaaa"
            android:alpha="0.2"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/et_new_confirm_password"
            android:hint="@string/txt_confirm_password"
            android:layout_marginTop="@dimen/margin_between_edit_texts"
            android:drawableLeft="@drawable/password_grey"
            android:drawablePadding="20dp"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            app:theme="@style/MyEditTextTheme"
            android:layout_below="@id/tv_below_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_below_new_confirm_password"
            android:layout_below="@id/et_new_confirm_password"
            android:background="#aaaaaa"
            android:layout_marginTop="2dp"
            android:alpha="0.2"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <Button
            android:id="@+id/btn_submit_reset_password"
            android:layout_marginTop="28dp"
            android:layout_below="@id/et_new_confirm_password"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:background="@drawable/btn_send_email"
            android:textColor="@color/colorWhite"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height" />
    </RelativeLayout>
</RelativeLayout>
