<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.siy.activity.recorder.RecorderHomeActivity">

    <include android:id="@+id/include_toolbar"
        layout="@layout/toolbar_layout"/>


    <RelativeLayout
        android:layout_below="@id/include_toolbar"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_please_enter_email_address"
            android:layout_centerHorizontal="true"
            android:textSize="16dp"
            android:text="@string/please_enter_your_email_address"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content" />

        <EditText
        android:id="@+id/et_email_id_forgot_password"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/email_grey"
        android:drawablePadding="20dp"
        android:hint="@string/txt_email_id"
        android:inputType="textEmailAddress"
        android:background="@android:color/transparent"
        android:theme="@style/MyEditTextTheme"
        android:layout_below="@id/tv_please_enter_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_below_please_enter_email_id"
            android:layout_below="@id/et_email_id_forgot_password"
            android:background="#aaaaaa"
            android:alpha="0.2"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <Button
            android:id="@+id/btn_send_email"
            android:layout_marginTop="20dp"
            android:layout_below="@id/et_email_id_forgot_password"
            android:background="@drawable/btn_send_email"
            android:layout_centerHorizontal="true"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height" />
    </RelativeLayout>
</RelativeLayout>